tests/toy/neg/001460_mutation.toylang
program a = { var a : program a = { } . int; } .
